# palautusrepositorio

./: README.md  important.txt  muutos.txt  toinenmuutos.txt  uusimuutos.txt
viikko1/nhl-statistics-1/: .coverage
viikko1/nhl-statistics-1/src/: index.py  statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistics_service_test.py  statisticsservice_test.py
viikko2/git-branch-harjoitus/: index.py  muutos.txt  tulo.py
viikko2/nhl-reader/src/: index.py  player.py
viikko2/poetry-web/: .gitignore  pyproject.toml
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/hello-robot/src/: log.html  output.xml  report.html
viikko3/web-login/: .gitignore
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: register.robot  resource.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/: .gitignore
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/: index.py  int_joukko.py
viikko5/int-joukko/src/tests/: int_joukko_test.py
viikko5/laskin/src/: kayttoliittyma.py
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  interactive_console_output.xml  matchers.py
viikko7/: referaatti.md
